# ESE519_lab2B

./: CMakeLists.txt  README.md  repl.c
code/flashlight/: flashlight.c
lab/: CMakeLists.txt
lab/01_registers/: README.md
lab/02_repl/: CMakeLists.txt  README.md  repl.c  repl.py  repl_usb.c
lab/02_repl/repl/: CMakeLists.txt  repl.c
lab/03_sequencer/: CMakeLists.txt  README.md  neopixel.c  sequencer.c  test.txt
lab/03_sequencer/PC/: sequencer.py  test.txt
lab/03_sequencer/pySerial/: main.py
lab/03_sequencer/sequencer/: sequencer.c
lab/04_slow_motion/: README.md
lab/04_slow_motion/PC/: test.txt
lab/05_i2c_traffic/: README.md
lab/06_pioscope/: CMakeLists.txt  Makefile  README.md  logicAnalyzer.c  registers.h
lab/07_pio_sequencer/: README.md
lab/07_pio_sequencer/pioscope/: CMakeLists.txt  pioscope.c
lab/07_pio_sequencer/sequencer/: CMakeLists.txt
lab/08_adps_protocol/: APDS9960.c  APDS9960.h  CMakeLists.txt  README.md  i2c.pio  pio_i2c.c
lab/09_lab_on_a_chip/: APDS9960.c  APDS9960.h  CMakeLists.txt  README.md  main.c  neopixel.c  neopixel.h  pio_i2c.c  pio_i2c.h  piosequencer.c  sequencer.c
lab/09_lab_on_a_chip/pioscope/: pioscope.c
lab/09_lab_on_a_chip/sequencer/: sequencer.c
lab/10_protoboard/: README.md  code.py
